--- a/Personal_website.html
+++ b/Personal_website.html
@@ -11,12 +11,12 @@
 <body>
 <section class="header">
     <div class="margin">
-        <div class="half-width">
-            <h2>Hello I'm</h2>
-            <h1><span class="name-highlight"> Md Saiful Islam</span></h1>
-            <p>You might saw me jumping, climbing buildings and stopping trains. But nobody pays me a dime for that work.</p>
-            <a class="btns" href="">Hire Me</a>
-        </div>
+       <div class="container"> <div class="half-width">
+        <h2>Hello I'm</h2>
+        <h1><span class="name-highlight"> Md Saiful Islam</span></h1>
+        <p>You might saw me jumping, climbing buildings and stopping trains. But nobody pays me a dime for that work.</p>
+        <a class="btns" href="">Hire Me</a>
+    </div></div>
         <div class="half-width">
             <img src="profile.png" alt="">
         </div>
@@ -25,7 +25,7 @@
 <section class="biography">
     <div class="margin">
         <div class="half-width">
-          <img src="profilef1.png" alt="">  
+          <img class="biography-img" src="profilef1.png" alt="">  
         </div>
         <div class="half-width">
             <div class="Biography">
@@ -44,7 +44,7 @@
 </section>
 <section class="my-latest-work">
     <div class="margin">
-        <div>
+        <div class="my-work">
             <h3 class="align-center">My Latest Work</h3>
            <div >
             <div class="img-align"><img src="work-1.png" alt=""></div>
@@ -65,19 +65,26 @@
            <div class="text">
             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> 
                 Incidunt reiciendis corrupti maiores molestias minima"</p>
-           </div>
-           <div class="margin">
-            <div class="margin message-box">
-                <p>Leave Me message</p>
-                <h6>www.mdsaifulislam72795@gmail.com</h6>
-               </div>
-           </div>
+           </div>   
         </div>
     </div>
    </div>
+   <div class="row">
+    <div class="col p-3 "></div>
+    <div class="col p-3 text-white">  <div class="margin">
+    <div class="background">
+        <p>Leave Me message</p>
+        <h6>www.mdsaifulislam72795@gmail.com</h6>
+    </div>
+   </div></div>
+    <div class="col p-3 "></div>
+  </div>
+</div>
+
    <footer class="align-center">
-    <p>All rights reserved by md saiful islam</p>
+    <p style="font-size: xx-small;">All rights reserved by md saiful islam</p>
    </footer>
+
 </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
