--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>Biography</h2>
               <div class="bd">
                 <p>
-                    My name is Md Saiful Islam. I'm 4th year university student. My major is physics.My institution name is Brahmanbaria Govt College which is affiliated with National University of Bangladesh, Gazipur. I have passed my S.S.C examination in 2016 from Kasba Govt High School. My S.S.C result was GPA 4.78 out of 5.00. I have passed my H.S.C in 2018 from Brahmanbaria Govt College. I have secured GPA 3.42 out of 5.00 in my H.S.C
+                    I'm Md Saiful Islam. I was born in Araibari a village of Kasba upzilla in Brahmanbaria district. I have passed my SSC examination in 2016 with securing  GPA 4.78 out of GPA 5.00 from Kasba Govt High School. My HSC result is 3.42. I had appeared in my HSC exam from Brahmanbaria govt college in 2018.
                 </p>
                 <div class="bd">
                     <a class="btns" href="">Download CV</a>
