--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>Biography</h2>
               <div class="bd">
                 <p>
-                    I'm Md Saiful Islam. I was born in Araibari a village of Kasba upzilla in Brahmanbaria district. I have passed my SSC examination in 2016 with securing  GPA 4.78 out of GPA 5.00 from Kasba Govt High School. My HSC result is 3.42. I had appeared in my HSC exam from Brahmanbaria govt college in 2018.
+                    I'm Md Saiful Islam. I was born in Araibari a village of Kasba upzilla in Brahmanbaria district. I have passed my SSC exam in 2016 from Kasba Govt High School and appeared in HSC exam from Brahmanbaria govt college in 2018.
                 </p>
                 <div class="bd">
                     <a class="btns" href="">Download CV</a>
