--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h2>Biography</h2>
               <div class="bd">
                 <p>
-                    I'm Md Saiful Islam. I was born in Araibari a village of Kasba upzilla in Brahmanbaria district. I have passed my SSC exam in 2016 from Kasba Govt High School and appeared in HSC exam from Brahmanbaria govt college in 2018.
+                    I'm Md Saiful Islam. I was born in Araibari a village of Kasba upzilla in Brahmanbaria district. I have passed my SSC & HSCexam in 2016 and 2018 respectively.
                 </p>
                 <div class="bd">
                     <a class="btns" href="">Download CV</a>
